--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ input[type=number]::-webkit-outer-spin-button {
 footer{
     background-color: #111;
 width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
 padding: 10px  14px;
 }
